--- a/modules/webapp/src/webapp/WEB-INF/config/aksess-defaults.conf
+++ b/modules/webapp/src/webapp/WEB-INF/config/aksess-defaults.conf
@@ -13,6 +13,9 @@ forms.deliveryservices=aksessDatabase,aksessEmail
 #
 location.contextpath=/
 
+# Autosave interval in minutes
+autosave.interval = 5
+
 # Configuration for rich text editor
 editor.default.plugins = lixscore,spellchecker,aksess_insertlink,aksess_insertmedia,aksess_inserttable,table,searchreplace,contextmenu,paste,fullscreen,noneditable,template,aksess_newmedia
 
